--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -423,7 +423,7 @@ img {
   width: 100%;
 }
 #mu-service .mu-service-area .mu-service-single {
-  background-color: #01bafd;
+  background-color: #283350;
   color: #fff;
   display: inline;
   float: left;
@@ -432,10 +432,10 @@ img {
   width: 33.33%;
 }
 #mu-service .mu-service-area .mu-service-single:nth-child(2) {
-  background-color: #2ecc71;
+  background-color: #F93800;
 }
 #mu-service .mu-service-area .mu-service-single:nth-child(3) {
-  background-color: #45a0de;
+  background-color: #FFB500;
 }
 #mu-service .mu-service-area .mu-service-single span {
   font-size: 30px;
