--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2184,12 +2184,12 @@ img {
   }
 
   .navbar-toggle {
-    background-color: #01bafd;
+    background-color: #283350;
     border-radius: 0;
   }
 
   .navbar-default .navbar-toggle {
-    border-color: #01bafd;
+    border-color: #283350;
   }
 
   .navbar-default .navbar-toggle .icon-bar {
