--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2207,6 +2207,7 @@ img {
 
   .navbar-default .navbar-toggle {
     border-color: #01bafd;
+     border-radius: 5px;
   }
 
   .navbar-default .navbar-toggle .icon-bar {
